# daily-feed

./: CLAUDE.md  Cargo.toml  README.md  bugs.md  comments.md  config.example.json  config.json  example-config-new-sources.json  example-config-old-format.json  flake.nix  frontpage-prompt.md  frontpage.md  warnings.md
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/recaps/: 2025-10-03-reading-time-estimation.md
src/: ai_client.rs  ars_comments.rs  ast.rs  config.rs  epub_outputter.rs  fetch.rs  front_page.rs  http_utils.rs  lib.rs  main.rs  markdown_outputter.rs  parser.rs  sources.rs
src/snapshots/: daily_feed__ai_client__tests__anthropic_request_structure.snap  daily_feed__ai_client__tests__anthropic_response_parsing.snap  daily_feed__ai_client__tests__retry_config_custom.snap  daily_feed__ai_client__tests__retry_config_default.snap  daily_feed__ai_client__tests__retry_logging_structure.snap  daily_feed__ai_client__tests__retryable_error_codes.snap  daily_feed__ars_comments__tests__fetch_top_comments_integration.snap  daily_feed__ars_comments__tests__fetch_top_comments_integration_offline.snap  daily_feed__ars_comments__tests__fetch_top_comments_integration_online.snap  daily_feed__ars_comments__tests__parse_comments_from_html.snap  daily_feed__ast__tests__document_creation.snap  (+14 more)
tests/: README.md  ars_comments_tests.rs  ast_tests.rs  config_tests.rs  cram_tests.rs  epub_outputter_tests.rs  fetch_tests.rs  front_page_tests.rs  golden_tests.rs  integration_tests.rs  markdown_outputter_tests.rs  parser_tests.rs
(+110 files in other folders)
