[package]
authors = ["Simon Zeng <contact@simonzeng.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "daily-feed"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
rss = { version = "2.0.6" }
reqwest = { version = "0.11.20" }
