[package]
authors = ["Simon Zeng <contact@simonzeng.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "daily-feed"
version = "0.1.0"

[[bin]]
name = "daily-feed"
path = "src/main.rs"

[[bin]]
name = "ast-to-epub"
path = "src/bin/ast_to_epub.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
rss = { version = "2.0.6" }
reqwest = { version = "0.11.20", features = ["json", "stream"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = { version = "0.3.28" }
epub-builder = "0.7.4"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
scraper = "0.17"
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
insta = { version = "1.34", features = ["json"] }
